--- a/.github/workflows/create-template-lambda.yml
+++ b/.github/workflows/create-template-lambda.yml
@@ -71,6 +71,7 @@ jobs:
           echo "9"
           git remote -v
           #git remote set-url origin git@github.com/$OWNER/$NEW_REPO
+          echo $OWNER/$NEW_REPO
           echo $GITHUB_REPOSITORY
           #git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           echo "10"
