--- a/.github/workflows/create-template-lambda.yml
+++ b/.github/workflows/create-template-lambda.yml
@@ -73,7 +73,7 @@ jobs:
           #git remote set-url origin git@github.com/$OWNER/$NEW_REPO
           echo $OWNER/$NEW_REPO
           echo $GITHUB_REPOSITORY
-          #git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$OWNER/$NEW_REPO
           echo "10"
           #git remote set-url origin https://username:access_token_or_password@gitlab.com/path_to_your_repo/repo.git
           #git push git@github.com:$OWNER/$NEW_REPO
