--- a/.github/workflows/create-template-lambda.yml
+++ b/.github/workflows/create-template-lambda.yml
@@ -65,7 +65,7 @@ jobs:
           git branch -M main
           git config --global user.name 'rafaishida'
           #git remote add origin https://github.com/$OWNER/$NEW_REPO
-          git remote add origin git@github.com:$OWNER/$NEW_REPO
+          git remote add origin git@github.com:$OWNER/$NEW_REPO.git
           
           # Empurrar o novo repositório para o repositório remoto
           echo "9"
