--- a/.github/workflows/create-template-lambda.yml
+++ b/.github/workflows/create-template-lambda.yml
@@ -77,6 +77,7 @@ jobs:
           echo "10"
           #git remote set-url origin https://username:access_token_or_password@gitlab.com/path_to_your_repo/repo.git
           #git push git@github.com:$OWNER/$NEW_REPO
+          curl -u "$OWNER/:$GITHUB_TOKEN" -X POST -H "Accept: application/vnd.github.v3+json" "https://api.github.com/user/repos" -d "{\"name\":\"$NEW_REPO\",\"private\":false}
           
           git push --set-upstream origin main
 
