--- a/.github/workflows/create-template-lambda.yml
+++ b/.github/workflows/create-template-lambda.yml
@@ -77,7 +77,17 @@ jobs:
           echo "10"
           #git remote set-url origin https://username:access_token_or_password@gitlab.com/path_to_your_repo/repo.git
           #git push git@github.com:$OWNER/$NEW_REPO
-          curl -u "$OWNER/:$GITHUB_TOKEN" -X POST -H "Accept: application/vnd.github.v3+json" "https://api.github.com/user/repos" -d "{\"name\":\"$NEW_REPO\",\"private\":false}
-          
+          # Instalar a CLI do GitHub
+          curl -sSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+          apt update
+          apt install -y gh
+
+          # Configurar a CLI do GitHub com o token de acesso pessoal
+          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+
+          # Criar o novo repositório
+          gh repo create $NEW_REPO_NAME --private     
+          echo "11"
           git push --set-upstream origin main
 
