--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -55,7 +55,7 @@ jobs:
             const template = payload.Template.split('\r\r')[0]
             
             core.setCommandEcho(true)
-            core.setOuput('json_var',payload)
+            core.setOutput('json_var',payload)
             core.setCommandEcho(false)
   create-github-repo:
     uses: rafaishida/reusable-workflows/.github/workflows/create-repo.yml@v3
