--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -89,18 +89,16 @@ jobs:
           
       - name: Criar novo repositório vazio
         id: criar-repo
-        run: |
-          TOKEN=${{ secrets.GITHUB_TOKEN }}
-          OWNER=${{ github.repository_owner }}
-          REPO_NAME=${{ needs.create-github-repo.outputs.repo_name }}
-
-          response=$(curl -X POST -s -H "Authorization: Bearer $TOKEN" \
-          -H "Accept: application/vnd.github.v3+json" \
-          -d '{"name":"'"$REPO_NAME"'"}' \
-          "https://api.github.com/user/repos")
-          repo_url=$(echo "$response" | jq -r '.html_url')
-        
-          echo "Repositório criado: $repo_url"
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const repo = await github.repos.createForAuthenticatedUser({
+              name: 'novo-repositorio',
+              auto_init: true
+            });
+            console.log(`Repositório criado: ${repo.data.html_url}`);
+            return repo.data.clone_url
              
           
 
